# cs4243-captcha

./: pyproject.toml
captcha_solver/: segmentation_and_cnn_model.pkl
captcha_solver/Segmentation_by_Color/: comparation_algos_segment.ipynb  preprocess_idea.docx
captcha_solver/Segmentation_by_Color/data_preprocess_example/: data_preprocess_Standardized.ipynb
captcha_solver/Segmentation_by_Color/dataset/: test_dataset_process.ipynb  train_dataset_process.ipynb
captcha_solver/evaluation/: char_acc.py
captcha_solver/models/: cnn.py  knn.ipynb  knn.py
captcha_solver/models/SAR/: SAR_BEAM.py  SNAR.py  attlstm.py  cnn_attn.py  draft.docx  model.py
captcha_solver/models/TrOCR/: overall_results.md  trocr_base_no_train.ipynb  trocr_base_no_train_results.csv  trocr_finetune_print_2epoch_1e-5_sched.ipynb  trocr_finetune_print_2epoch_1e-5_sched_results.csv  trocr_finetune_print_2epoch_3e-5.ipynb  trocr_finetune_print_2epoch_3e-5_results.csv  trocr_finetune_print_3epoch_1e-5_warmup10_beam.ipynb  trocr_finetune_print_3epoch_1e-5_warmup10_beam_results.csv  trocr_finetune_print_3epoch_5e-6_warmup10.csv  trocr_finetune_print_3epoch_5e-6_warmup10.ipynb  trocr_finetune_print_5epoch_5e-5.csv  trocr_finetune_print_5epoch_5e-5.ipynb  trocr_finetune_print_5epoch_5e-5_results.csv
captcha_solver/models/end2end_CNN/: CRNN.py  baseCNN.py  baseGateCNN.py  calculate_acc.py  gateCNN.py  inference.py  train.py
captcha_solver/models/generation/: FGSM_dataset.py  FGSM_discriminator.py  (+8 more)
captcha_solver/preprocessing/: box.ipynb  clean_characters.py  resize.py  segment.py  utils.py
(+23 files in other folders)
