[project]
name = "captcha-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "einops>=0.8.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pulp>=2.9.0",
    "pytesseract>=0.3.13",
    "rich>=13.9.4",
    "scipy>=1.15.0",
    "shapely>=2.0.6",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
